src/test/ui/save-analysis/issue-68621.min_tait.stderr
error: could not find defining uses
  --> $DIR/issue-68621.rs:16:19
   |
LL |     type Future = impl Trait;
   |                   ^^^^^^^^^^

error: aborting due to previous error

